kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapi
  labels:
    app: goapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goapi
  template:
    metadata:
      labels:
        app: goapi
  template:
    metadata:
      labels:
        app: goapi
    spec:
      containers:
      - name: goapi
        image: docker.io/amsirin/goapi:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8000
        resources:
          limits:
            cpu: 10m
            memory: 30Mi
          requests:
            cpu: 10m
            memory: 30Mi
      terminationGracePeriodSeconds: 30
