kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
  labels:
    app: goapi
  name: goapi
spec:
  backend:
    serviceName: goapi
    servicePort: 80
  rules:
  - host: amsirin.api
    http:
      paths:
      - path: /
        backend:
          serviceName: goapi
          servicePort: 80
